--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,202 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 30px; 
+  background-color: rgb(255,211, 25);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* PokemonList.css */
+.pokemon-list-container {
+  margin: 0;
+  margin-left: 30px;
+  margin-right: 30px;
+  background-color: rgb(254,226,62);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap; 
+  justify-content: center; 
+  align-items: center; 
+  font-size: 40px;
+}
+
+.pokemon-item {
+  display: inline-block;
+  width: 23%; 
+  margin: 1%; 
+  padding: 10px;
+  background-color: rgb(246,239,119);
+  border-radius: 40px;
+  text-align:left;
+}
+.pokemon-item:hover {
+  background-color: rgb(255,255,0);
+  
+}
+.pokemon-item:hover div {
+  background-color: rgb(255,255,0); 
+}
+
+.pokemon-item img {
+  width: 300px; 
+  height: 300px;  
+  align-self: center;
+}
+
+/* Navbar.css */
+.navbar {
+  background-color: rgb(201,175,40);
   color: white;
+  padding: 10px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  font-size: 3.5rem;
+  font-weight: bold;
 }
+
+.nav-links {
+  list-style: none;
+  font-size: 1.5rem;
+  display: flex;
+  gap: 20px;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease;
+}
+
+.nav-links li a:hover {
+  color: #61dafb; 
+}
+/* Pokemon */
+.pokemon-container {
+  display: flex;
+  align-items: center;
+  margin: 20px;
+  border: 1px solid rgb(24, 23, 5);
+  border-radius: 10px;
+  background-color: rgb(246, 239, 119);
+  padding: 20px;
+ 
+}
+
+.pokemon-image-container {
+  flex: 1;
+}
+
+.pokemon-image {
+  width: 350px;
+  height: 350px;
+  display: block;
+  margin: 0 auto;
+}
+
+.pokemon-details {
+  flex: 1;
+  padding-left: 20px;
+  text-transform: uppercase;
+  font-family: "Times New Roman", sans-serif;
+  
+}
+
+.pokemon-details h2 {
+  font-size: 44px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.pokemon-details h3 {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.pokemon-list {
+  list-style: none;
+  padding: 0;
+}
+
+.pokemon-list li {
+  margin: 5px 0;
+}
+/* Add borders for abilities, types, stats, and moves */
+.ability-details,
+.type-details,
+.stats-details,
+.moves-details {
+  border: 1px solid rgb(24, 23, 5);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px 0;
+  width: 20%;
+}
+
+/* Style h3 elements for each section */
+.ability-details h3,
+.type-details h3,
+.stats-details h3,
+.moves-details h3 {
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+/*pagination*/
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(201,175,40);
+  margin-left: 30px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-right: 30px;
+
+}
+
+.button-container button {
+  background-color:rgb(187,137,0); /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.button-container button:hover {
+  background-color: rgb(150,94,0); /* Darker green */
+}
+
+.button-container button:disabled {
+  background-color: #cccccc; /* Grey */
+  cursor: not-allowed;
+}
+
+/*About*/
+.about-container {
+  background-color: #f9f9f9;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
